...

    <string name="search_hint">Search on Music Sheet Writer</string>
    <string name="search_no_result">No result</string>

    <string name="action_logout">Log out</string>
    <string name="logging_out">Logging out</string>
    <string name="action_login">Log in</string>
    <string name="action_refresh">Refresh</string>

    <string name="tab_home">Home</string>
    <string name="tab_my_scores">My Scores</string>
    <string name="tab_scores">Scores</string>
    <string name="tab_favourite">Favourite scores</string>
...
    <string name="action_change_account"><u>Change account</u></string>
    <string name="password_lost"><u>Password lost ?</u></string>
    <string name="action_create_account">Create an account</string>
    <string name="success_creation_account_title">One last step !</string>
    <string name="success_creation_account_message">Your account has successfully been created. You have to validate your account by using the link sent by mail to you.</string>

    <string name="am_account_type" translatable="false">com.musicsheetwriter</string>
    <string name="am_auth_token_type" translatable="false">com.musicsheetwriter.user.connection.token</string>
    <string name="am_auth_token_none" translatable="false">noAuthToken</string>
    <string name="am_user_data_user_id" translatable="false">com.musicsheetwriter.user.user_id</string>

    <string name="title_activity_forgotten_password">Forgotten Password</string>
    <string name="forgotten_password_explanation">Don\'t worry ! Fill the field below with the address email associated with your Music Sheet Writer account. An email will be sent at this address with a link to reset your password.</string>
    <string name="success_forgotten_password_title">Email sent</string>
    <string name="success_forgotten_password_message">An email with a link has been sent to you. Follow this link to reinitialize your password.</string>

    <string name="alert_connection_lost">Connection lost</string>
    <string name="alert_connection_recovered">Connection recovered</string>

    <string name="error_username_format">The username has a bad format.</string>
    <string name="error_email_format">The email has a bad format.</string>
    <string name="error_username_already_used">This username is already used.</string>
    <string name="error_email_already_used">This email is already used.</string>
    <string name="error_no_such_email">This email address is associated with no account.</string>
    <string name="error_wrong_password">Current password not correct.</string>
    <string name="error_password_format">The password has a bad format. It must contain between 6 and 20 characters with at least one letter and one digit.</string>
    <string name="error_no_network">No network. Please double check your internet connection.</string>
    <string name="error_unknown">An unknown error has occurred.</string>
    <string name="error_message">An error occurred.</string>
    <string name="error_edit_picture_unable">Unable to change your profile picture</string>

    <string name="error_bad_credentials_title">Bad credentials</string>
    <string name="error_bad_credentials_message">The couple username/password used is incorrect</string>
    <string name="error_close_account_title">Close Account</string>
    <string name="error_close_account_message">The account you are attempting to connect on has been closed. Contact the administrators on our website for more information</string>
    <string name="error_not_activated_account_title">Account not activated</string>
    <string name="error_not_activated_account_message">Your account has not been activated yet. Please confirm your address email using the confirmation email.</string>

    <string name="title_activity_user_profile" translatable="false">UserProfileActivity</string>
    <string name="action_subscribe">Subscribe</string>
    <string name="action_unsubscribe">Unsubscribe</string>
    <string name="user_scores">Scores</string>
...
