...
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:hint="@string/hint_email"
            android:id="@+id/edit" />

        <Space
            android:layout_width="wrap_content"
            android:layout_height="28dp" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:enabled="false"
            android:id="@+id/button"
            android:layout_gravity="center_horizontal"/>
    </LinearLayout>

</RelativeLayout>

