...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="textPersonName"
                            android:hint="@string/hint_username"
                            android:focusable="true"
                            android:textColor="@color/text_icons_over_primary"
                            android:id="@+id/login_username" />
                    </android.support.design.widget.TextInputLayout>

                    <Space
                        android:layout_width="@dimen/login_username_changeaccount_space"
                        android:layout_height="wrap_content" />

...
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:ems="10"
                    android:hint="@string/hint_password"
                    android:textColor="@color/text_icons_over_primary"
                    android:id="@+id/login_password" />
            </android.support.design.widget.TextInputLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
...
